// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-js snapshot check to ensure test stability Advanced Default value 1`] = `
{
  "data": {
    "advancedDefaultInput": "{"input":{"enumField":"Transport","otherField":"Foo"}}",
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability Advanced Default value in variables 1`] = `
{
  "data": {
    "advancedDefaultInput": "{"input":{"enumField":"Film","otherField":"The Empire Strikes Back"}}",
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability Default value 1`] = `
{
  "data": {
    "searchFilmsByTitle": [
      {
        "title": "The Empire Strikes Back",
      },
    ],
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability Default value in variables 1`] = `
{
  "data": {
    "searchFilmsByTitle": [
      {
        "title": "The Empire Strikes Back",
      },
    ],
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability Not passing arg value vs passing arg value 1`] = `
{
  "data": {
    "multiArger": "{}",
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability Not passing arg value vs passing arg value 2`] = `
{
  "data": {
    "multiArger": "{"a":null}",
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability basic query 1`] = `
{
  "data": {
    "__typename": "Query",
    "person": {
      "gender": "male",
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability basic query with variables 1`] = `
{
  "data": {
    "person": {
      "gender": "male",
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability basic subscription with unused non-required variable 1`] = `
[
  {
    "data": {
      "emitPersons": {
        "gender": "male",
        "name": "Luke Skywalker",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "n/a",
        "name": "C-3PO",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "n/a",
        "name": "R2-D2",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "male",
        "name": "Darth Vader",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "female",
        "name": "Leia Organa",
      },
    },
  },
]
`;

exports[`graphql-js snapshot check to ensure test stability basic subscription with variables 1`] = `
[
  {
    "data": {
      "emitPersons": {
        "gender": "male",
        "name": "Luke Skywalker",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "n/a",
        "name": "C-3PO",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "n/a",
        "name": "R2-D2",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "male",
        "name": "Darth Vader",
      },
    },
  },
  {
    "data": {
      "emitPersons": {
        "gender": "female",
        "name": "Leia Organa",
      },
    },
  },
]
`;

exports[`graphql-js snapshot check to ensure test stability benchmark kitchen-sink query 1`] = `
{
  "data": {
    "empireHero": {
      "birth_year": "19BBY",
      "gender": "male",
      "height": 172,
      "mass": 77,
      "name": "Luke Skywalker",
    },
    "jediHero": {
      "birth_year": "41.9BBY",
      "gender": "male",
      "name": "Darth Vader",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability errors and nulls 1`] = `
{
  "data": {
    "person": {
      "bubblingError": null,
      "bubblingListError": null,
      "name": "Luke Skywalker",
    },
  },
  "errors": [
    [GraphQLError: Bubbling!],
    [GraphQLError: Bubbling in list!],
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability include directive FALSE 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability include directive TRUE 1`] = `
{
  "data": {
    "person": {
      "gender": "male",
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability interface in object fragment spread 1`] = `
{
  "data": {
    "person": {
      "id": 1,
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability interface in union fragment spread 1`] = `
{
  "data": {
    "person": {
      "id": 1,
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability non-null query return null 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Cannot return null for non-nullable field Query.nonNullWithNull.],
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability non-null query throw an error 1`] = `
{
  "data": null,
  "errors": [
    [GraphQLError: Query error],
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability non-null subscription return null 1`] = `
[
  {
    "data": null,
    "errors": [
      [GraphQLError: Cannot return null for non-nullable field Subscription.nonNullWithNull.],
    ],
  },
]
`;

exports[`graphql-js snapshot check to ensure test stability non-null subscription throw in resolve 1`] = `
[
  {
    "data": null,
    "errors": [
      [GraphQLError: Subscription event error],
    ],
  },
]
`;

exports[`graphql-js snapshot check to ensure test stability non-null subscription throw in subscribe 1`] = `
{
  "errors": [
    [GraphQLError: Subscribe error],
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability query with interfaces 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
    "vehicle": {
      "name": "Snowspeeder",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability query with union 1`] = `
{
  "data": {
    "search": [
      {
        "__typename": "Person",
        "name": "Luke Skywalker",
      },
      {
        "__typename": "Person",
        "name": "Luminara Unduli",
      },
      {
        "__typename": "Planet",
        "name": "Felucia",
      },
      {
        "__typename": "Planet",
        "name": "Sullust",
      },
      {
        "__typename": "Species",
        "name": "Sullustan",
      },
      {
        "__typename": "Transport",
        "name": "Raddaugh Gnasp fluttercraft",
      },
      {
        "__typename": "Vehicle",
        "name": "Raddaugh Gnasp fluttercraft",
      },
    ],
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability skip directive FALSE 1`] = `
{
  "data": {
    "person": {
      "gender": "male",
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability skip directive TRUE 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability subscription throw an error 1`] = `
{
  "errors": [
    [GraphQLError: error],
  ],
}
`;

exports[`graphql-js snapshot check to ensure test stability union in interface fragment spread 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability union in object fragment spread 1`] = `
{
  "data": {
    "person": {
      "name": "Luke Skywalker",
    },
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability union in object fragment spread 2`] = `
{
  "data": {
    "person": {},
  },
}
`;

exports[`graphql-js snapshot check to ensure test stability with __typename 1`] = `
{
  "data": {
    "person": {
      "__typename": "Person",
    },
  },
}
`;
